vlib/v/checker/tests/redefining_builtin_pub_functions.vv
fn exit(x string) {
	println('my exit: $x')
}

fn print_backtrace() {
	println('hello')
}

fn main() {
	print_backtrace()
}
